# il-ev-counts

./: README.md  pyproject.toml  query_clean_registration_data.py  query_registration_data.py
data/: ev_counts_electric011522.csv  ev_counts_electric021522.csv  ev_counts_electric031522.csv  ev_counts_electric041522.csv  ev_counts_electric051522.csv
tasks/: run_lint.sh
