[tool.poetry]
name = "il-ev-counts"
version = "0.1.0"
description = "Used to download EV registration totals, convert to csv, and analyze"
authors = ["Robert Spragg"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "~1.2"
pdfplumber = "^0.6.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "==4.0.1"
